@@ -1,5 +1,13 @@
 2004-10-19  Matti Aarnio  <mea@zmailer.org>
 
+	* smtpserver/policytest.c:
+	    Report loudly (into log), when DNS lookups take more
+	    than 30 seconds.
+
+	* smtpserver/subdaemons.c:
+	    There must be at least dummy pointer init for rate-tracker,
+	    too..
+
 	* include/shmmib.h, scheduler/mailq.inc:
 	    Added couple subserver task queue tracker variables,
 	    and their printouts.  These are debug stuff, but still..
